--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,9 +34,9 @@
 <!-- ////////////////////////////////// -->
 <!-- //     Google Webfont Files     // -->
 <!-- ////////////////////////////////// -->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,300,700,500,900"/>
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans"/>
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Pacifico"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,700,500,900"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico"/>
 
 <!-- ////////////////////////////////// -->
 <!-- //        Favicon Files         // -->
@@ -46,7 +46,7 @@
 <!-- ////////////////////////////////// -->
 <!-- //      Javascript Files        // -->
 <!-- ////////////////////////////////// -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="/js/jquery.easing-1.3.min.js"></script>
 <script src="/js/modernizr.js"></script>
 <script src="/js/superfish.js"></script>
