--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -28,8 +28,10 @@
                          <input type="password" class="textfield" id="ticket" value="<%=user.pin%>" readonly="true"/>
                         <label>Ticket</label>                           
                         <input type="text" class="textfield" id="ticket" value="<%=user.ticket%>" readonly="true"/>
-                        <label>Saldo</label>                           
-                        <input type="text" class="textfield" id="ticket" value="<%=user.saldo%>" readonly="true"/>  
+                        <label>Bonus Sponsor</label>                           
+                        <input type="text" class="textfield" id="ticket" value="<%=user.sponsor%>" readonly="true"/>  
+                        <label>Bonus Manager</label>                           
+                        <input type="text" class="textfield" id="ticket" value="<%=user.manager%>" readonly="true"/>  
                         <div class="clear"></div> 
                         <label>&nbsp;</label>
                         <a href="/user/editprofile"><button type="submit" class="buttoncontact" id="buttonsend">Edit Profil</button></a>
