Add Bonus Multiple

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -151,6 +151,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                             <ul> 
                                 <li><a href="/user/bonussponsor">Bonus Sponsor</a></li>
                                 <li><a href="/user/bonusmanager">Bonus Manager</a></li>
+                                <li><a href="/user/bonusmultiple">Bonus Kelipatan</a></li>
                             </ul>
                         </li> 
                         <% if(session.authenticated) { %>
