--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -31,7 +31,9 @@
                         <label>Bonus Sponsor</label>                           
                         <input type="text" class="textfield" id="ticket" value="<%=user.sponsor%>" readonly="true"/>  
                         <label>Bonus Manager</label>                           
-                        <input type="text" class="textfield" id="ticket" value="<%=user.manager%>" readonly="true"/>  
+                        <input type="text" class="textfield" id="ticket" value="<%=user.manager%>" readonly="true"/> 
+                        <label>Bonus Kelipatan</label>                           
+                        <input type="text" class="textfield" id="ticket" value="<%=user.multiple%>" readonly="true"/>   
                         <div class="clear"></div> 
                         <label>&nbsp;</label>
                         <a href="/user/editprofile"><button type="submit" class="buttoncontact" id="buttonsend">Edit Profil</button></a>
