Fix bug for nominal

--- a/views/user/history.ejs
+++ b/views/user/history.ejs
@@ -11,7 +11,7 @@
                     <br>
                     User GH: <%=jodoh.ugh%>
                     <br>
-                    Nominal : <%=jodoh.nominal%>
+                    Nominal : <%=jodoh.value%>
                     <br>
                     Tanggal : <%=jodoh.createdAt%>
             </div>
