--- a/views/user/phgh.ejs
+++ b/views/user/phgh.ejs
@@ -86,7 +86,7 @@
                                                <% return false; %>
                                         <% } %>
                                     <% }) %>
-                                    Nominal : <%=jdhughs.nominal%>
+                                    Nominal : <%=jdhughs.value%>
                                     <br>
                                     Tanggal : <%=jdhughs.createdAt%>
                                     <br>
@@ -120,7 +120,7 @@
                                        <% return false; %>
                                 <% } %>
                             <% }) %>
-                            Nominal : <%=jdhuphs.nominal%>
+                            Nominal : <%=jdhuphs.value%>
                             <br>
                             Tanggal : <%=jdhuphs.createdAt%>
                             <br>
@@ -143,7 +143,7 @@
                                                <% return false; %>
                                         <% } %>
                                     <% }) %>
-                                    Nominal : <%=jdhuphs.nominal%>
+                                    Nominal : <%=jdhuphs.value%>
                                     <br>
                                     Tanggal : <%=jdhuphs.createdAt%>
                                     <br>
@@ -165,7 +165,7 @@
                                                <% return false; %>
                                         <% } %>
                                     <% }) %>
-                                    Nominal : <%=jdhuphs.nominal%>
+                                    Nominal : <%=jdhuphs.value%>
                                     <br>
                                     Tanggal : <%=jdhuphs.createdAt%>
                                     <br>
