--- a/views/user/phgh.ejs
+++ b/views/user/phgh.ejs
@@ -37,7 +37,7 @@
                                        <% return false; %>
                                 <% } %>
                             <% }) %>
-                            Nominal : <%=jdhughs.nominal%>
+                            Nominal : <%=jdhughs.value%>
                             <br>
                             Tanggal : <%=jdhughs.createdAt%>
                             <br>
@@ -60,7 +60,7 @@
                                                <% return false; %>
                                         <% } %>
                                     <% }) %>
-                                    Nominal : <%=jdhughs.nominal%>
+                                    Nominal : <%=jdhughs.value%>
                                     <br>
                                     Tanggal : <%=jdhughs.createdAt%>
                                     <br>
