--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -145,7 +145,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                 <nav id="mainmenu">
                     <ul id="menu">
                         <% if(session.authenticated) { %>
-                        <li><a href="/user/phgh">PH/GH<br><span class="desc-menu">PH/GH</span></a>
+                        <li><a href="/user/phgh">Home<br><span class="desc-menu">PH/GH</span></a>
                         </li>                                                
                         <li><a href="/user/team">Team<br><span class="desc-menu">List</span></a>
                         </li>
@@ -196,9 +196,6 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
         <div class="row">
             <div class="nine column">
                 <h6>Contact Information</h6>
-                <div class="say-hello">
-                    <h4><a href="contact.html">Holla!</a></h4>
-                </div>
                 <ul class="footer-address no-bullet">
                     <li class="address">25 Silver Avenue. Jakarta, JKT, 12345. IND</li>
                     <li class="phone">(621) 123 4567</li>
