--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -22,16 +22,8 @@
                          <input type="text" class="textfield" id="ticket" value="<%=user.namabank%>" readonly="true"/>
                          <label>No. Rekening</label>
                          <input type="text" class="textfield" id="ticket" value="<%=user.norek%>" readonly="true"/>
-                         <label>Nama Rekening</label>
-                         <input type="text" class="textfield" id="ticket" value="<%=user.namarek%>" readonly="true"/>
-                        <label>Ticket</label>                           
-                        <input type="text" class="textfield" id="ticket" value="<%=user.ticket%>" readonly="true"/>
-                        <label>Bonus Sponsor</label>                           
-                        <input type="text" class="textfield" id="ticket" value="<%=user.sponsor%>" readonly="true"/>  
-                        <label>Bonus Manager</label>                           
-                        <input type="text" class="textfield" id="ticket" value="<%=user.manager%>" readonly="true"/> 
-                        <label>Bonus Kelipatan</label>                           
-                        <input type="text" class="textfield" id="ticket" value="<%=user.multiple%>" readonly="true"/>   
+                         <label>Nama di Rekening</label>
+                         <input type="text" class="textfield" id="ticket" value="<%=user.namarek%>" readonly="true"/>  
                         <div class="clear"></div> 
                         <label>&nbsp;</label>
                         <a href="/user/editprofile"><button type="submit" class="buttoncontact" id="buttonsend">Edit Profil</button></a>
