--- a/views/user/phgh.ejs
+++ b/views/user/phgh.ejs
@@ -1,7 +1,6 @@
 <section class="content-wrapper">
-        <div class="row">
-            <div class="eleven column">
-                <p class="lead">Apakah anda ingin PH / GH ? </p>
+        <div class="row" style="margin-left: 300px; width: 0%;">
+            <div class="twelve column" >
                 <a href="/user/pleasehelp"><button type="submit" class="button large blue" id="buttonsend">PH</button></a>
                 <a href="/user/gethelp"><button type="submit" class="button large red" id="buttonsend">GH</button></a>
             </div>
@@ -21,7 +20,7 @@
         <% } else { %>
         <% _.each(jdhughs, function(jdhughs) { %>
            <% if(jdhughs.confirmation) { %>
-                    <div class="eight column note-folded blue" style="margin: 12px;">
+                    <div class="seven column note-folded blue" style="margin: 12px;">
                             <h2>Anda akan menerima uang dari : </h2>
                             User : <%=jdhughs.uph%>
                             <br>
@@ -44,7 +43,7 @@
                     </div>
             <% } else { %>
                     <% if(jdhughs.sendcomment) { %>
-                             <div class="eight column note-folded grey" style="margin: 12px;">
+                             <div class="seven column note-folded grey" style="margin: 12px;">
                                     <h2 style="color:white;">Anda akan menerima uang dari : </h2>
                                     User : <%=jdhughs.uph%>
                                     <br>
@@ -70,7 +69,7 @@
                                     </form>
                             </div>
                     <% } else { %>
-                            <div class="eight column note-folded red" style="margin: 12px;">
+                            <div class="seven column note-folded red" style="margin: 12px;">
                                     <h2 style="color:white;">Anda akan menerima uang dari : </h2>
                                     User : <%=jdhughs.uph%>
                                     <br>
@@ -102,7 +101,7 @@
         <% } else { %>
         <% _.each(jdhuphs, function(jdhuphs) { %>
             <% if(jdhuphs.confirmation) { %>
-                    <div class="eight column note-folded blue" style="margin: 12px;">
+                    <div class="seven column note-folded blue" style="margin: 12px;">
                             <h2>Anda harus mengirim uang ke : </h2>
                             User : <%=jdhuphs.ugh%>
                             <br>
@@ -125,7 +124,7 @@
                     </div>
             <% } else { %>
                     <% if(jdhuphs.sendcomment) { %>
-                             <div class="eight column note-folded red" style= "margin: 12px;">
+                             <div class="seven column note-folded red" style= "margin: 12px;">
                                     <h2 style="color:white;">Anda harus mengirim uang ke : </h2>
                                     User : <%=jdhuphs.ugh%>
                                     <br>
@@ -147,7 +146,7 @@
                                     <h2 style="color:white">WAITING</h2>
                             </div>
                     <% } else { %>
-                            <div class="eight column note-folded grey" style="margin: 12px;">
+                            <div class="seven column note-folded grey" style="margin: 12px;">
                                     <h2 style="color:white;">Anda harus mengirim uang ke : </h2>
                                     User : <%=jdhuphs.ugh%>
                                     <br>
