--- a/views/a-home.ejs
+++ b/views/a-home.ejs
@@ -25,7 +25,7 @@
                       <input type="submit" class="btn btn-lg btn-primary btn-block" value="Masuk"/>
                       <input type="hidden" name="_csrf" value="<%= _csrf %>" />
                       <br>
-                      <p style="font-size:15px; font-weight: normal;">Pelajari lebih lanjut? <a href="#" data-toggle="modal" data-target="#myModal">FAQ</a>.</p>
+                      <p style="font-size:15px; font-weight: normal;">Pelajari lebih lanjut? <a href="/faq">FAQ</a>.</p>
                   </div>
                 </div>
           </div>
